--- a/app/javascript/packs/app/assets/stylesheets/app.scss
+++ b/app/javascript/packs/app/assets/stylesheets/app.scss
@@ -1,7 +1,12 @@
-//** PAGES **//
+//\\//\\**//\\//\\**//\\//\\** PAGES **//\\//\\**//\\//\\**//\\//\\
 @import "pages/home/home.scss";
-@import "pages/home/todo.scss";
 
-//** CORE COMPONENTS **//
+
+//\\//\\**//\\//\\**//\\//\\** PAGE COMPONENTS **//\\//\\**//\\//\\**//\\//\\
+@import "todoList/todo.scss";
+@import "todoList/newTodo.scss";
+@import "todoList/list.scss";
+
+//\\//\\**//\\//\\**//\\//\\** CORE COMPONENTS **//\\//\\**//\\//\\**//\\//\\
 @import "core_components/input";
 @import "core_components/button";
