--- a/app/javascript/packs/app/assets/stylesheets/app.scss
+++ b/app/javascript/packs/app/assets/stylesheets/app.scss
@@ -1,5 +1,5 @@
 //\\//\\**//\\//\\**//\\//\\** PAGES **//\\//\\**//\\//\\**//\\//\\
-@import "pages/home/home.scss";
+@import "../components/pages/style.scss";
 
 
 //\\//\\**//\\//\\**//\\//\\** PAGE COMPONENTS **//\\//\\**//\\//\\**//\\//\\
