--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,8 @@
     <title>ToDoList</title>
     <%= csrf_meta_tags %>
 
-    <%= javascript_pack_tag 'app/index' %>
-    <%= stylesheet_pack_tag 'app/assets/stylesheets/app' %>
+    <%= javascript_pack_tag 'app/app' %>
+    <%= stylesheet_pack_tag 'app/main' %>
   </head>
 
   <body>
