--- a/app/javascript/packs/app/components/todoList/new_todo/style.scss
+++ b/app/javascript/packs/app/components/todoList/new_todo/style.scss
@@ -5,8 +5,13 @@ li {
 
     .inputGroup {
         display: flex;
-    }
-    .todoGroup {
-        display: flex;
+
+        .inputCol {
+            flex: 50%;
+        }
+
+        .btnCol {
+            flex: 50%;
+        }
     }
 }
